<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="false"
        card_view:elevation="5dp">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
                        android:id="@+id/image_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher"
                        card_view:shape_mode="circle"
                        card_view:stroke_color="@color/profile_divider"
                        card_view:stroke_width="4dp" />


                    <ImageView
                        android:id="@+id/imageUpload"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignEnd="@+id/image_profile"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_edit_image" />


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/profile_divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name_lbl"
                    android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/profile_title" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/name_login"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/profile_sub_title"
                    android:textColorHint="@color/profile_sub_title_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/profile_divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_email_lbl"
                     android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/profile_title" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_login"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                     android:inputType="textEmailAddress"
                    android:textSize="14sp"
                     android:textColor="@color/profile_sub_title"
                    android:textColorHint="@color/profile_sub_title_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/profile_divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_password_lbl"
                     android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/profile_title" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_login"
                    android:inputType="textPassword"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="14sp"
                     android:textColor="@color/profile_sub_title"
                    android:textColorHint="@color/profile_sub_title_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/profile_divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_phone_lbl"
                     android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/profile_title" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone_login"
                    android:inputType="phone"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="14sp"
                     android:textColor="@color/profile_sub_title"
                    android:textColorHint="@color/profile_sub_title_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/profile_divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_lbl"
                     android:textSize="14sp"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/profile_title" />

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/address_title"
                    android:inputType="textPersonName"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="14sp"
                     android:textColor="@color/profile_sub_title"
                    android:textColorHint="@color/profile_sub_title_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/profile_divider" />


            </LinearLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>
</RelativeLayout>